2009-10-09  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Server.pm, bin/pandora_server: Small fixes to avoid
	  warnings.

2009-10-07  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/SNMPServer.pm,
	  lib/PandoraFMS/DataServer.pm: Reverted the way enterprise functions
	  are called.

	* lib/PandoraFMS/Server.pm
	  lib/PandoraFMS/ProducerConsumerServer.pm: Handle fatal errors and
	  save error messages (useful for console event generation).

	* lib/PandoraFMS/Tools.pm: Improved enterprise_hook.

	* lib/PandoraFMS/Core.pm: Merged pandora_event_status into
	  pandora_event.

	* bin/pandora_server, lib/PandoraFMS/Config.pm: Added restart on error
	  and auto-restart features.

2009-09-30  Sancho Lerena <slerena@artica.es>

	* lib/PandoraFMS/DataServer.pm: Reduced timeout for sleep
	on BADXML from 60 to 10 sec. This could result in bottleneck
	when several BADXML found at the same time. Default code 
	retries 3 times x 10 secs, time enough to discard and retry.

	* util/pandora_db.pl: Disabled non-init modules are not deleted.
	This is needed for disabled modules coming from a remote conf
	(manual or by policy) who cannot execute in agent. If are
	deleted each day after purge, will appear as "unknown" and     
	admin will need to disable it again, and the same next day.

	* pandora_server.spec: A complete uninstall for RPM. Database
	is not killed because user could be just uninstalling one of
	multiple servers and drop it will not be funny :-)

2009-09-28  Sancho Lerena <slerena@artica.es>

	* lib/PandoraFMS/Config.pm: Updatged build.

	* lib/PandoraFMS/Core.pm: Added new macro fields for alerts:
	id_agent, alert_priority, alert name and module name. Also
	fixed a problem in macro substitution when recursive fields
	was used.  

2009-09-25  Sancho Lerena <slerena@artica.es>

	* pandora_server.spec: Some fixes to SUSE RPM.

	* conf/pandora_server.conf: Added some missing default values

	* lib/PandoraFMS/Config.pm: Added some missing default values.
